# gst-cv-example

./: CMakeLists.txt  README.md
gst-customplugin/: GST_ELEMENT_HOWTO.md  compile-filters  compile-meta  gstsmartfilter.c  gstsmartfilter.h  gststupidfilter.c  gststupidfilter.h  stupidsmartmeta.c  stupidsmartmeta.h
include/my_app/: utils.h
include/utils/: common.h
include/version_info/: version.h
src/my_app/: utils.c
src/utils/: common.c
tests/: CMakeLists.txt  my_app.c
